# Redes

./: Exemplo  README.md
Cliente/: CMakeLists.txt  ChatClient.h  client_win.cpp  imconfig.h  imgui.cpp  imgui.h  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_dx11.cpp  imgui_impl_dx11.h  imgui_impl_win32.cpp  imgui_internal.h  imgui_tables.cpp  imgui_widgets.cpp  imstb_textedit.h  imstb_truetype.h
Servidor/: CMakeLists.txt  server_win.cpp
